@@ -1,8 +1,15 @@
 2010-01-27  Romain Francois <francoisromain@free.fr>
 
-	* src/Rcpp/CharacterVector.h: CharacterVector::StringProxy
-	gains implicit conversion to std::string
+	* src/Rcpp/CharacterVector.h: CharacterVector gains a default
+	constructor
 	
+	* src/Rcpp/CharacterVector.h: CharacterVector gains range
+	constructors and range based assign methods facilitating 
+	construction from iterators
+	
+	* inst/unitTests/runit.CharacterVector.R: unit tests for assign
+	and range based constructors
+
 	* src/Rcpp/CharacterVector.h: CharacterVector::StringProxy
 	gets a printing operator <<(std::ostream& )
 
